# smartwatch

./: README.md
SOFTWARE/e-paper/: CMakeLists.txt  epd.overlay  prj.conf
SOFTWARE/e-paper/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_settings.txt
SOFTWARE/e-paper/build_1/Kconfig/: Kconfig.sysbuild.modules
SOFTWARE/e-paper/build_1/modules/azure-sdk-for-c/: cmake_install.cmake
SOFTWARE/e-paper/build_1/modules/canopennode/: cmake_install.cmake
SOFTWARE/e-paper/build_1/modules/chre/: cmake_install.cmake
SOFTWARE/e-paper/build_1/modules/cirrus-logic/: cmake_install.cmake
SOFTWARE/e-paper/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
SOFTWARE/e-paper/src/: epd1in54_V2.c  epd1in54_V2.h  epdif.c  epdif.h  epdpaint.c  epdpaint.h  font12.c  font16.c  font20.c  font24.c  font8.c  imagedata.c  imagedata.h  main.c
SOFTWARE/smartwatch/: CMakeLists.txt  bl653_nrf52833.overlay  nrf52833dk_nrf52833.overlay  prj.conf
SOFTWARE/smartwatch/src/: main.c
SOFTWARE/smartwatch/src/BLE/: BLE.c  BLE.h  notification_service.c  notification_service.h  step_count_service.c  step_count_service.h  time_sync_service.c  time_sync_service.h
SOFTWARE/smartwatch/src/RTC/: rtc.c  rtc.h
SOFTWARE/smartwatch/src/UI/: buttons.c  buttons.h  display.c  display.h  ui_controller.c  ui_controller.h  vibration.c  vibration.h
SOFTWARE/smartwatch/src/accelerometer/: accelerometer.c  accelerometer.h  bma4.c  bma456w.c  bma456w.h  common.c  common.h
SOFTWARE/smartwatch/src/power/: npm1300.c  npm1300.h  npm1300func.c  npm1300func.h
SOFTWARE/smartwatch/src/watch_controller/: watch_controller.c  watch_controller.h
(+300 files in other folders)
